--- a/BookStore.Site/Views/Shared/_Layout.cshtml
+++ b/BookStore.Site/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("首頁", "Index", "Home")</li>
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡人", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("註冊", "Register", "Members")</li>
+
                 </ul>
             </div>
         </div>
