IMemberRepository-GetByAccount, MemberRepository-Instance GetByAccount, MemberDTO-ToDTO

--- a/BookStore.Site/Views/Members/Login.cshtml
+++ b/BookStore.Site/Views/Members/Login.cshtml
@@ -6,10 +6,10 @@
 
 <h2>Login</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>LoginVM</h4>
         <hr />
@@ -32,7 +32,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Login" class="btn btn-default" />
             </div>
         </div>
     </div>
